2007-12-07 [colin]	3.1.0cvs67

	* src/main.c
	* src/summaryview.c
	* src/common/utils.c
	* src/common/utils.h
		We have to free reused regexps from time to
		time, or they get huge

2007-12-07 [colin]	3.1.0cvs66

	* src/vcard.c
		Fix QP decoding (and UTF8)

2007-12-07 [colin]	3.1.0cvs65

	* src/addrcustomattr.c
		Update list of default custom attributes
		now (will be needed for a feature patch
		post 3.2.0)

2007-12-07 [colin]	3.1.0cvs64

	* src/folder.c
		Batch on destination folder when copying - fixes
		slowness when moving unread mails to trash on IMAP

2007-12-06 [colin]	3.1.0cvs63

	* src/common/w32_time.c
	* src/common/w32lib.h
	* src/etpan/etpan-thread-manager.c
	* src/etpan/imap-thread.c
	* src/etpan/nntp-thread.c
	* src/gtk/Makefile.am
		Fix win32 build with libetpan. Thanks to
		Marcus Brinkmann.

2007-12-06 [colin]	3.1.0cvs62

	* src/account.c
	* src/imap.c
	* src/prefs_account.c
	* src/prefs_account.h
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Disable connection via command line on WIN32
		Disable mmap use on WIN32 - use normal strings
	* src/addressbook.c
	* src/addressbook.h
	* src/addressbook_foldersel.c
	* src/addressbook_foldersel.h
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c
	* src/plugins/bogofilter/bogofilter_gtk.c
	* src/plugins/dillo_viewer/dillo_prefs.c
	* src/plugins/spamassassin/spamassassin_gtk.c
		Fix leak, rework function logics to be more
		natural - thanks to Holger
	* src/common/utils.c
		Fix warnings

2007-12-06 [colin]	3.1.0cvs61

	* src/news.c
	* src/common/utils.c
	* src/common/utils.h
		Fix posting, and fix UTF-8 being sent when encoding
		is 8bit

2007-12-05 [colin]	3.1.0cvs60

	* src/news.c
		Fix debian bug #453157, 'Fails to post usenet
		articles after NNTP connection has been 
		interrupted". Fix return value to prevent deletion
		on failure, and issue MODE READER in case posting
		fails at first.

2007-12-05 [colin]	3.1.0cvs59

	* src/messageview.c
	* src/uri_opener.c